samples/_failures_safe/1761613232_ca3317_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4eabb188.c: In function ‘compute_bounding_box’:
./samples/SAFE/__tmp_4eabb188.c:120:13: error: expected ‘;’ at end of input
  120 |     return 1
      |             ^
      |             ;
./samples/SAFE/__tmp_4eabb188.c:120:5: error: expected declaration or statement at end of input
  120 |     return 1
      |     ^~~~~~
